--- a/src/components/elements/body/main.css
+++ b/src/components/elements/body/main.css
@@ -1,5 +1,38 @@
-.imagenes{
-    width: 650px;
-    height: 650px;
-    background-color: black;
+.container{
+    display: grid; 
+  grid-template-columns: 1.2fr 1.2fr 1.2fr 1.2fr; 
+  grid-template-rows: 1.7fr 1.7fr; 
+  gap: 0px 0px; 
+  grid-template-areas: 
+    ". . . ."
+    ". . . .";
 }
+.card{
+    position: relative;
+    align-items: center;
+    width: 300px;
+    height: 450px;
+
+}
+.imagen{
+    width: 90%;  
+    height: 90%;
+   
+    
+}
+.containerGalery{
+    justify-content: space-around; 
+    width: auto;
+}
+.name{
+    color: white;
+
+}
+.namePosition{
+    position: absolute;
+    font-weight: 600;
+    z-index: 1;
+    top: 78%;
+    left: 10%
+}
+
